--- a/data/blog/deriving-ols-estimator.mdx
+++ b/data/blog/deriving-ols-estimator.mdx
@@ -14,8 +14,14 @@ Benchmark is an App that allows you to find Benches in no time. This App is perf
 
 A lot of credit goes to "OpenStreetMaps" for making this whole project possible.
 
-# Deriving the OLS Estimator
+# Add a Bench
 
-Using matrix notation, let $n$ denote the number of observations and $k$ denote the number of regressors.
+You can use this feature to mark benches on the map that have not yet been integrated in our system and thus helping us and others to make the app more usable.
 
-The vector of outcome variables $\mathbf{Y}$ is a $n \times 1$ matrix,
+# Leaderboard
+
+When you mark Benches on the Map you can enter a Nickname and climb the Leaderboard.
+
+# Get the App now
+
+Download [benchmark on Google Play](https://play.google.com/store/apps/details?id=com.naturestudios.benchmark).
