--- a/data/blog/benchmark-app.mdx
+++ b/data/blog/benchmark-app.mdx
@@ -24,4 +24,4 @@ When you mark Benches on the Map you can enter a Nickname and climb the Leaderbo
 
 # Get the App now
 
-Download [benchmark on Google Play](https://play.google.com/store/apps/details?id=com.naturestudios.benchmark).
+Download [Benchmark on Google Play](https://play.google.com/store/apps/details?id=com.naturestudios.benchmark).
