change tiktodv3 page

--- a/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
+++ b/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
@@ -9,6 +9,8 @@ layout: PostSimple
 authors: ['default']
 ---
 
+This tutorial will show you how to use tiktodv3 Script Python. First you need to install a few prerequisites. Also make sure to check me out on [GitHub for more Python projects](https://github.com/ezzcodeezzlife).
+
 # Install prerequisites
 
 ## Install Python 3
@@ -46,6 +48,13 @@ cd tiktodv3
 ```
 
 Now you should be in the directory tiktodv3.
+There should be 3 files in this directory:
+
+```
+tiktodv3.py
+README.md
+requirements.txt
+```
 
 ## Install modules
 
