center issue link

--- a/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
+++ b/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
@@ -101,6 +101,6 @@ If you are experiencing problems with Selenium Webdriver on MacOS or Linux, you 
 
 zefoy.com has a vpn protection and does not allow you to access the website when using a vpn or proxy.
 
-## If you have further questions or problems with the script, please open an issue on GitHub.
+## If you have further questions or problems with the script, please open an issue on GitHub or write a comment below:
 
-[tiktodv3 - New Issue](https://github.com/kangoka/tiktodv3/issues/new/choose)
+<center>[tiktodv3 - New Issue](https://github.com/kangoka/tiktodv3/issues/new/choose)</center>
