add empty page & change layout

--- a/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
+++ b/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
@@ -5,7 +5,7 @@ tags: ['python', 'tiktok', 'bot', 'script', 'likes', 'views', 'shares', 'tiktodv
 draft: false
 summary: Tutorial for tiktodv3 Script Python
 images: []
-layout: PostSimple
+layout: PostLayout
 authors: ['default']
 ---
 
