--- a/data/blog/how-to-use-memeapi-with-examples-python-javascript-c-php-go.mdx
+++ b/data/blog/how-to-use-memeapi-with-examples-python-javascript-c-php-go.mdx
@@ -9,7 +9,7 @@ layout: PostLayout
 authors: ['default']
 ---
 
-# D3vd/Meme_ApiMeme API
+# Get started D3vd/Meme_ApiMeme
 
 JSON API for a random meme scraped from reddit. API Endpoint for random meme: [https://meme-api.herokuapp.com/gimme](https://meme-api.herokuapp.com/gimme). By default the API grabs a random meme from '_memes_', '_dankmemes_', '_me_irl_' subreddits. You can also specify the subreddit. I used this API for this [project "Reddit to Instagram"](https://github.com/ezzcodeezzlife/reddit-to-instagram) myself.
 
