--- a/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
+++ b/data/blog/how-to-use-tiktodv3-tiktok-script-python.mdx
@@ -103,4 +103,6 @@ zefoy.com has a vpn protection and does not allow you to access the website when
 
 ## If you have further questions or problems with the script, please open an issue on GitHub or write a comment below:
 
+[Find more here](https://www.appsplosion.com/python?topic=tiktok)
+
 <center>[tiktodv3 - New Issue](https://github.com/kangoka/tiktodv3/issues/new/choose)</center>
