--- a/data/blog/how-to-use-instagram-bot-dm-python-script-for-beginners.mdx
+++ b/data/blog/how-to-use-instagram-bot-dm-python-script-for-beginners.mdx
@@ -1,5 +1,5 @@
 ---
-title: How to-use Instagram Bot DM Python Script for beginners
+title: How to use Instagram Bot DM Python Script for beginners
 date: '2022-04-27'
 tags: ['beginner', 'python', 'instagram', 'dm', 'bot']
 draft: false
