--- a/data/blog/how-to-use-tiktokmassbotting-python-script-beginner-tutorial.mdx
+++ b/data/blog/how-to-use-tiktokmassbotting-python-script-beginner-tutorial.mdx
@@ -115,7 +115,7 @@ For better performance you can run the script on a VPS or Raspberry Pi. If you w
 For raspberry check out this article:
 [raspberrypi.org/magazine/how-to-install-python-on-a-raspberry-pi-3-or-4/](https://www.raspberrypi.org/magazine/how-to-install-python-on-a-raspberry-pi-3-or-4/)
 
-To schedule the script you can a cronjob.
+To schedule the script you can use a cronjob.
 
 ```bash
 crontab -e
