--- a/data/blog/how-to-use-instahack-python-script-for-beginner-programmers.mdx
+++ b/data/blog/how-to-use-instahack-python-script-for-beginner-programmers.mdx
@@ -51,7 +51,7 @@ You could also use GitHub Desktop to clone the repository.
 cd instahack
 ```
 
-Now you should be in the directory TikTokMassBotting.
+Now you should be in the directory instahack.
 There should be some files in this directory:
 
 ```
