--- a/data/blog/how-to-use-instahack-python-script-for-beginner-programmers.mdx
+++ b/data/blog/how-to-use-instahack-python-script-for-beginner-programmers.mdx
@@ -70,7 +70,7 @@ You will need to fill the file with various combinations of passwords.
 ## Run the script
 
 ```bash
-python main.py
+python hackinsta.py
 ```
 
 # Enjoy!
